option java_package = "org.apache.hadoop.hbase.protobuf.generated";
option java_outer_classname = "TriggerMasterProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

message IsMasterRunningRequest {
}

message IsMasterRunningResponse {
  required bool isMasterRunning = 1;
}

service TriggerMasterService {

  /** return true if master is available */
  rpc isMasterRunning(IsMasterRunningRequest) returns(IsMasterRunningResponse);

  rpc submitTrigger()
}